--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -20,6 +20,7 @@
     <title>{% block title %}{% endblock %}</title>
   </head>
   <body>
+    <div id="backdrop"></div>
     {% block main %}{% endblock %} {% block script_action %}{% endblock %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
     <script
