--- a/app/templates/components/navbar.html
+++ b/app/templates/components/navbar.html
@@ -1,10 +1,60 @@
-<nav
+<header class="py-3 mb-3 border-bottom" style="background-color: #b5b9bb">
+  <div
+    class="container-fluid d-grid gap-3 align-items-center"
+    style="grid-template-columns: 1fr 2fr"
+  >
+    <div>
+      <a class="navbar-brand menu-button" href="#">
+        <i class="fa-solid fa-bars fa-xl" style="margin: auto"></i>
+      </a>
+    </div>
+    <div class="d-flex align-items-center justify-content-end">
+      <div class="flex-shrink-0 dropdown">
+        <a
+          href="#"
+          class="d-block link-body-emphasis text-decoration-none dropdown-toggle"
+          data-bs-toggle="dropdown"
+          aria-expanded="false"
+        >
+          <!-- <img
+            src="https://github.com/mdo.png"
+            alt="mdo"
+            width="32"
+            height="32"
+            class="rounded-circle"
+          /> -->
+          {{ current_user.nome }}
+        </a>
+        <ul class="dropdown-menu">
+          <li>
+            <a class="dropdown-item" href="#"
+              ><i class="fas fa-id-card"></i> Perfil</a
+            >
+          </li>
+          <li>
+            <a class="dropdown-item" href="#"
+              ><i class="fas fa-sliders-h"></i> Configurações</a
+            >
+          </li>
+          <li>
+            <a class="dropdown-item" href="{{ url_for('authentication.logout') }}"
+              ><i class="fas fa-sign-out"></i> Sair</a
+            >
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</header>
+<!-- <nav
   class="navbar navbar-expand-lg"
   style="background-color: #55585a"
   data-bs-theme="dark"
 >
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand menu-button" href="#">
+      <i class="fa-solid fa-bars fa-xl" style="margin: auto;"></i>
+    </a>
     <button
       class="navbar-toggler"
       type="button"
@@ -55,4 +105,4 @@
       </ul>
     </div>
   </div>
-</nav>
+</nav> -->
