--- a/app/templates/components/sidebar.html
+++ b/app/templates/components/sidebar.html
@@ -1,14 +1,18 @@
 <div class="sidebar">
-  <div class="header-box px-3 pt-3 pb-4 mb-4 text-center">
-    <h1 class="fs-4">Sistema XYZ</h1>
+  <div class="header-box px-3 pt-3 pb-5 mb-4 text-center d-flex justify-content-between">
+    <h1 class="fs-4 w-100 my-0">Paroquial</h1>
+    <a id="sidebar-menu-button" style="margin: auto; cursor: pointer;">
+      <i class="fa-solid fa-bars fa-xl"></i>
+    </a>
   </div>
+  <h6 class="mx-3">Menu</h6>
   <ul class="px-2">
     <li class="py-2">
       <a
         href="/pages{{ url_for('casal.index') }}"
         class="text-decoration-none px-3 py-2 d-block"
         data-link
-        ><i class="fa fa-list-ol"></i> Casais</a
+        ><i class="fa fa-list-ol fa-lg mx-2"></i> Casais</a
       >
     </li>
     <li class="py-2">
@@ -16,17 +20,7 @@
         href="/pages{{ url_for('movimento.index') }}"
         class="text-decoration-none px-3 py-2 d-block"
         data-link
-        ><i class="fas fa-users fa-lg"></i> Movimentos</a
-      >
-    </li>
-    <li class="py-2">
-      <a href="#" class="text-decoration-none px-3 py-2 d-block"
-        ><i class="fas fa-user fa-lg"></i> Professores</a
-      >
-    </li>
-    <li class="py-2">
-      <a href="#" class="text-decoration-none px-3 py-2 d-block"
-        ><i class="fas fa-list fa-lg"></i> Diários</a
+        ><i class="fas fa-users fa-lg  mx-2"></i> Movimentos</a
       >
     </li>
   </ul>
