--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,7 +6,7 @@
 {% endblock %} {% block main %}
 <div class="d-flex min-vh-100">
   {% include "components/sidebar.html" %}
-  <div class="w-100">
+  <div class="w-100 d-flex flex-column">
     <div
       id="mainToast"
       style="top: 3.6rem"
@@ -27,6 +27,45 @@
     </div>
     {% include "components/navbar.html" %}
     <div id="app" class="dashboard-content px-3 pt-4"></div>
+    <footer
+      class="d-flex flex-wrap justify-content-between align-items-center py-3 border-top mt-auto"
+      style="background: #b5b9bb"
+    >
+      <div class="col-md-4 d-flex align-items-center">
+        <a
+          href="/"
+          class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1"
+        >
+          <svg class="bi" width="30" height="24">
+            <use xlink:href="#bootstrap"></use>
+          </svg>
+        </a>
+        <span class="mb-3 mb-md-0 text-body-secondary"
+          >© 2023 Company, Inc</span
+        >
+      </div>
+
+      <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+        <li class="ms-3">
+          <a class="text-body-secondary" href="#"
+            ><svg class="bi" width="24" height="24">
+              <use xlink:href="#twitter"></use></svg
+          ></a>
+        </li>
+        <li class="ms-3">
+          <a class="text-body-secondary" href="#"
+            ><svg class="bi" width="24" height="24">
+              <use xlink:href="#instagram"></use></svg
+          ></a>
+        </li>
+        <li class="ms-3">
+          <a class="text-body-secondary" href="#"
+            ><svg class="bi" width="24" height="24">
+              <use xlink:href="#facebook"></use></svg
+          ></a>
+        </li>
+      </ul>
+    </footer>
   </div>
 </div>
 {% endblock %}
