--- a/app/templates/movimento/index.html
+++ b/app/templates/movimento/index.html
@@ -20,6 +20,7 @@
     >
   </div>
 </nav>
+{% if movimentos %}
 <table class="table table-striped table-hover">
   <thead>
     <tr>
@@ -60,4 +61,9 @@
     {% endfor %}
   </tbody>
 </table>
+{% else %}
+  <div class="data-not-found py-3">
+    <h1>Nenhum dado encontrado...</h1>
+  </div>
+{% endif %}
 
