Inclusao da tela de usuarios.

--- a/app/templates/components/sidebar.html
+++ b/app/templates/components/sidebar.html
@@ -9,6 +9,14 @@
   <ul class="px-2">
     <li class="py-2">
       <a
+        href="/pages{{ url_for('usuario.index') }}"
+        class="text-decoration-none px-3 py-2 d-block"
+        data-link
+        ><i class="fa fa-user fa-lg mx-2"></i> Usuários</a
+      >
+    </li>
+    <li class="py-2">
+      <a
         href="/pages{{ url_for('casal.index') }}"
         class="text-decoration-none px-3 py-2 d-block"
         data-link
