Inclusão de casais em círculos.

--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -92,3 +92,12 @@
   font-size: 2rem;
   text-align: center;
 }
+
+.lista-casais {
+  min-height: 42px;
+  border: solid 1px;
+}
+
+.lista-casais li {
+  cursor: grabbing;
+}
