--- a/app/templates/movimento/equipe.html
+++ b/app/templates/movimento/equipe.html
@@ -3,7 +3,7 @@
 <nav class="navbar bg-body-tertiary">
   <div class="container-fluid">
     <a
-      href="/pages{{ url_for('movimento.index') }}"
+      href="/pages{{ back_link }}"
       class="btn btn-primary"
       data-link
       >Voltar</a
