--- a/app/templates/movimento/register.html
+++ b/app/templates/movimento/register.html
@@ -39,7 +39,7 @@
     <div class="col-6">
       <div class="d-grid gap-2 d-md-flex justify-content-md-start">
         <a
-          href="/pages{{ url_for('movimento.index') }}"
+          href="/pages{{ back_link }}"
           style="width: 100px"
           class="btn btn-secondary"
           type="button"
